# arui

./: readme.md  todo.txt
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/base/api/: ARUIAPI.ts  index.ts
frontend/src/lib/base/api/list/: BroadcastedEvents.ts  IPC.ts  Logger.ts
frontend/src/lib/base/api/list/Native/: KeyListener.svelte.ts  KeyListener.ts  MediaInfo.svelte.ts  TaskbarItemList.svelte.ts  index.ts
frontend/src/lib/components/: mouse-events-capturer.svelte
frontend/src/lib/components/mouse-events-capturer/: mouse-events-capturer-store.svelte.ts  mouse-events-capturer.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/overlays/taskbar/: +layout.svelte  +page.svelte
renderer/: .gitignore  index.js  package.json  pnpm-lock.yaml
win-media-info-rust/: Cargo.toml  README.md
win-media-info-rust/src/: main.rs
win-taskbar-item-list-rust/: .gitignore  Cargo.toml  output.txt
win-taskbar-item-list-rust/src/: main.rs
win-taskbar-manager-rust/: Cargo.toml  README.md  emergency_restore.bat  run_as_admin.bat  test_force_close.bat  test_x_button.bat
win-taskbar-manager-rust/src/: emergency_restore.rs  main.rs  taskbar.rs
