[package]
name = "win-media-info"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_MediaFoundation",
    "Win32_System_WinRT",
    "Win32_System_Ole",
    "Media_Control",
    "Storage_Streams"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
image = "0.24"
clap = { version = "4.0", features = ["derive"] }