[package]
name = "win-taskbar-item-list"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi", "handleapi", "shellapi", "objbase", "combaseapi", "wingdi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
widestring = "1.0"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22"
image = "0.24"
png = "0.17"
lnk = "0.5"