[package]
name = "win-taskbar-manager"
version = "0.1.0"
edition = "2021"
authors = ["Armagan <armagan@example.com>"]
description = "Windows Taskbar Manager - Hide taskbar and capture mouse events"

[[bin]]
name = "win-taskbar-manager"
path = "src/main.rs"

[[bin]]
name = "emergency-restore"
path = "src/emergency_restore.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "signal"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
clap = { version = "4.0", features = ["derive"] }
